fix panel image stretching

--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -1,12 +1,10 @@
 .panel {
-  display: flex;
-  flex-wrap: wrap;
   border-radius: 10px;
+  height: 100%;
   box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 
   .panel-body {
-    flex: 1;
     display: flex;
     flex-direction: column;
     padding: 12px 18px;
@@ -22,11 +20,10 @@
   }
 
   .panel-image {
-    overflow: hidden;
-
     img {
       width: 100%;
-      max-height: 250px;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
